<resources>
    <string name="app_name">Rainist_Android_Test</string>


    <!--  SignUp Page Hint  -->
    <string name="please_input_signup_email">이메일을 입력해주세요.</string>
    <string name="please_input_signup_pwd">비밀번호를 입력해주세요.(대,소문자,숫자 최소 1개 포함)</string>
    <string name="please_input_signup_pwd_confirm">위의 비밀번호를 다시 입력해주세요.</string>
    <string name="please_input_signup_nickname">닉네임을 입력해주세요. (8~20자)</string>
    <string name="please_input_signup_birthday">생년월일을 입력해주세요.</string>
    <string name="please_input_signup_gender_comment">성별을 선택해주세요.</string>
    <string name="please_input_signup_agree_comment">약관을 읽어주시고 동의해주세요.</string>
    <string name="signup_agree_term">약관에 동의(필수)</string>
    <string name="signup_agree_marketing">마케팅 동의(선택)</string>

    <!--  SignUp Page  -->
    <string name="signup_button">회원가입</string>
    <string name="gender_man">남자</string>
    <string name="gender_woman">여자</string>
    <string name="gender_non_selected">선택 안 함</string>
    <string name="picked_date">%d-%d-%d</string>
    <string name="gender_error">성별 관련 오류가 발생되었습니다.</string>
    <string name="fail_load_user_data">회원 정보가 없습니다.</string>
    <string name="fail_save_user_data">회원 정보를 저장하는데 실패하였습니다.</string>
    <string name="result_msg">%d : %s</string>

    <!--   Http Result  -->
    <string name="http_code_400">만 14세 미만은 회원가입이 불가합니다.</string>
    <string name="http_code_401">이미 가입된 계정입니다.</string>
    <string name="http_code_200">회원가입이 성공적으로 완료되었습니다.</string>
    <string name="please_press_onemore">종료하려면 한번 더 누르세요.</string>
    <string name="result_agree_term">약관에 %s</string>
    <string name="result_agree_marketing">마케팅에 %s</string>
    <string name="agree">동의</string>
    <string name="disagree">동의 안함</string>
    <string name="go_to_signup_page"><u>아직 회원이 아니신가요? 클릭</u></string>

    <!--  Login Page  -->
    <string name="login_button">로그인</string>
    <string name="success_login">로그인이 되었습니다.</string>
    <string name="fail_login">이메일을 확인해주세요.</string>
    <string name="fail_no_account">회원 정보가 없습니다.</string>
    <string name="fail_get_user_info">회원 정보를 불러오던 중 알 수 없는 오류가 발생했습니다.</string>
    <string name="fail_password">비밀번호를 확인해주세요.</string>

</resources>